--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#DCB9C5"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".controller.LoginActivity">
 
     <ImageView
         android:id="@+id/logo_img"
