--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="#DCB9C5"
+    tools:context=".controller.MainActivity">
 
     <TextView
         android:id="@+id/textViewEmail"
@@ -14,6 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
+        android:textColor="@color/colorPrimary"
         android:text="Email"
         android:textSize="25sp"
         android:textStyle="bold" />
@@ -24,11 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="26dp"
         android:text="Logout"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
